<resources>
    <string name="app_name">TaskManager</string>
    <string name="b1txt">Sort by pic</string>
    <string name="b2txt">New..</string>
    <string name="scndtitle">New event</string>
    <string name="dateDesc">Date</string>
    <string name="eventDesc">Short description</string>
    <string name="dateInput">22–03–2019</string>
    <string name="descInput">Go for a walk</string>
    <string name="scndBtn">OK</string>
    <string name="onIncorrectEvent">Incorrect data!</string>
    <string name="fsttitle">To do:</string>
</resources>
