<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:windowSoftInputMode="stateVisible|adjustNothing">

    <TextView
            android:text="@string/eventDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.104"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/newDate"/>
    <TextView
            android:text="@string/scndtitle"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_width="202dp"
            android:layout_height="47dp"
            android:id="@+id/scndTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <EditText
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="@string/dateInput"
            android:ems="10"
            android:imeOptions="actionDone"
            android:id="@+id/newDate"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.422"/>
    <TextView
            android:text="@string/dateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.081" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/scndTitle"/>
    <EditText
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:text="@string/descInput"
            android:ems="10"
            android:id="@+id/newDesc" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="213dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/newDesc" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/scndConfirm"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/picList"/>
    <Button
            android:text="@string/scndBtn"
            android:layout_width="183dp"
            android:layout_height="51dp"
            android:id="@+id/scndConfirm"
            android:layout_marginBottom="16dp"
            android:onClick="addNew"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>