<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fsttitle"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView" android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.498"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="486dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintVertical_bias="0.467"
            android:id="@+id/eventsList"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/linearLayout">
        <Button
                android:text="@string/b1txt"
                android:layout_width="wrap_content"
                android:onClick="sortByPic"
                android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"/>
        <Button
                android:text="@string/b2txt"
                android:layout_width="wrap_content"
                android:onClick="onNewClick"
                android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>